<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jelanidenis.courseq.SimpleSignIn">


    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/main_form"
        android:layout_width="299dp"
        android:layout_height="316dp"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/inquiry"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="@string/title_inquiry"
            android:gravity="center"
            android:textColor="@color/com_facebook_blue"
            android:textSize="30dp"/>


        <TextView
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="@string/add_a_class"
            android:gravity="center"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/add_button"
            style="?android:textAppearanceSmall"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/review_title"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:text="@string/review_a_class"
            android:gravity="center"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/review_button"
            style="?android:textAppearanceSmall"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/review"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
