<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.courseq.example.courseq.Add_A_Class">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_review"
        android:gravity="center"
        android:textColor="@color/com_facebook_blue"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <!-- Login progress -->
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="299dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="18dp"
                android:hint="@string/prompt_search"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ListView
                android:id="@+id/search_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="center">
            </ListView>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/next_button"
            style="?android:textAppearanceSmall"
            android:layout_width="100dp"
            android:layout_marginLeft="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/next"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/back_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:background="@drawable/roundedbutton"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/back_to_main"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_out_button"
            style="?android:textAppearanceSmall"
            android:layout_width="90dp"
            android:background="@drawable/roundedbutton"
            android:layout_height="40dp"
            android:layout_marginLeft="120dp"
            android:text="@string/sign_out"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
