<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.courseq.example.courseq.SimpleSignUp">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_signup"
        android:gravity="center"
        android:textColor="@color/com_facebook_blue"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <!-- Login progress -->
    <!--
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="299dp"
        android:layout_height="316dp"
        android:layout_marginTop="50dp"
        >
        -->

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="299dp"
        android:layout_height="450dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">
        <!--
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        -->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/netid"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="18dp"
                android:hint="@string/prompt_netid"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="18dp"
                android:hint="@string/prompt_name"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/grad_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/grad_year"
            android:gravity="center"
            android:textSize="18dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
        <ListView
            android:id="@+id/year_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        </ListView>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="18dp"
                android:hint="@string/prompt_major"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <ListView
                android:id="@+id/major_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            </ListView>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="100dp"
            android:layout_marginLeft="100dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="60dp"
            android:background="@drawable/roundedbutton"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="-20dp"
            android:text="@string/sign_in"
            android:textStyle="bold" />


    </LinearLayout>
    <!--</ScrollView>-->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
