<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jelanidenis.courseq.Add_A_Class2">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/com_facebook_blue"
        android:textStyle="bold"
        android:textSize="30dp"/>

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/Q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q1"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/com_facebook_blue"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5"
                android:id="@+id/ratingBar1" />

            <TextView
                android:id="@+id/Q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q2"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/com_facebook_blue"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5"
                android:id="@+id/ratingBar2" />

            <TextView
                android:id="@+id/Q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q3"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/com_facebook_blue"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5"
                android:id="@+id/ratingBar3" />

            <TextView
                android:id="@+id/Q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q4"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/com_facebook_blue"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5"
                android:id="@+id/ratingBar4" />

            <TextView
                android:id="@+id/Q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q5"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/com_facebook_blue"
                />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5"
                android:id="@+id/ratingBar5" />

            <TextView
                android:id="@+id/Q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q6"
                android:gravity="center"
                android:textSize="20dp"
                android:textColor="@color/com_facebook_blue"
                />

            <EditText
                android:id="@+id/yr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                 />

            <Button
                android:id="@+id/add_button"
                style="?android:textAppearanceSmall"
                android:layout_width="100dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
